--- a/photos.html
+++ b/photos.html
@@ -5,13 +5,13 @@
  All rights reserved
  -->
 <head>
-<title>Andy B Goode - Vintage Rock n Roll Singer, Staffordshire, UK</title>
+<title>Andy B Goode - Photos- Vintage Rock n Roll Singer, Staffordshire, UK</title>
 <link rel="stylesheet" type="text/css" href="style.css"/>
 <meta name="short" content="AndyBGoode 1950s/60 Rock and Roll Entertainer - Photos"/>
 <meta name="description" content="Andy B Goode 1950s/1960s Rock n Roll Singer based in Tamworth, Staffordshire, England">
 <meta name="author" content="Andrew Britton">
 <meta charset="UTF-8">
-<meta name="keywords" content="AndyBGoode,Andy B Goode,Singer,Vocalist,Tamworth,1950s,1960s,Rock n Roll,Rock and Roll,Entertainment,Vintage">
+<meta name="keywords" content="AndyBGoode,Andy B Goode,Singer,Vocalist,Tamworth,1950s,1960s,Rock n Roll,Rock and Roll,Entertainment,Vintage,Photos">
 
 <link rel="apple-touch-icon" sizes="57x57" href="/images/apple-icon-57x57.png">
 <link rel="apple-touch-icon" sizes="60x60" href="/images/apple-icon-60x60.png">
@@ -44,16 +44,6 @@
 
 <body>
 
-<div itemscope itemtype="http://schema.org/WebSite">
-  <div itemprop="author" itemscope itemtype="http://schema.org/Person"><meta itemprop="name" content="Andy B Goode"/></div>
-  <div itemprop="accountablePerson" itemscope itemtype="http://schema.org/Person"><meta itemprop="name" content="Andy B Goode"/></div>
-  <meta itemprop="description" content="Andy B Goode is a dynamic 1950s/1960s Rock n Roll/Vintage Singer based in Tamworth Staffordshire England" />
-  <meta itemprop="image" content="http://www.andybgoode.com/images/andybgoode.png" />
-  <meta itemprop="url" content="http://www.AndyBGoode.com" />
-  <meta itemprop="isFamilyFriendly" content="True" />
-  <meta itemprop="genre" content="Rock n Roll" />
-  <meta itemprop="keywords" content="Andy B Goode, AndyBGoode, Rock n Roll, Rock and Roll, Singer, Entertainer, Tamworth, Staffordshire, England, UK, Vintage, Classic" />
-</div>
 <h1><img id="logo" src="images/logo.gif" alt="AndyBGoode Logo"> Andy B Goode</h1>
 
 <div class="menu">
@@ -64,9 +54,7 @@
 <a href="terms.html">Terms</a>
 <a href="#contact">Contact</a>
 </div>
-
 <br/>
-
 
 
 <div id="main">
@@ -89,16 +77,16 @@ Click on a photo to download high quality version (for publicity purposes).
 
 <table class="phototable">
 <tr>
-<td class="phototablecell"><a href="images/andybgoode.jpg"download><img src="images/andybgoode.jpg" class="photo" alt="Click to download high quality version" ></a></td>
-<td class="phototablecell"><a href="images/andybgoode.jpg" download><img src="images/andybgoode.jpg" class="photo" alt="Click to download high quality version" ></a></td>
-<td class="phototablecell"><a href="images/andybgoode.jpg" download><img src="images/andybgoode.jpg" class="photo" alt="Click to download high quality version" ></a></td>
-<td class="phototablecell"><a href="images/andybgoode.jpg" download><img src="images/andybgoode.jpg" class="photo" alt="Click to download high quality version" ></a></td>
+<td class="phototablecell"><a href="photos/andybgoode0002-highres.jpg" download><img src="photos/andybgoode0002.jpg" class="photo" alt="Click to download high quality version" ></a></td>
+<td class="phototablecell"><a href="photos/andybgoode0001-highres.jpg"download><img src="photos/andybgoode0001.jpg" class="photo" alt="Click to download high quality version" ></a></td>
+<td class="phototablecell"><a href="photos/andybgoode0004-highres.jpg" download><img src="photos/andybgoode0004.jpg" class="photo" alt="Click to download high quality version" ></a></td>
+<td class="phototablecell"><a href="photos/andybgoode0014-highres.jpg" download><img src="photos/andybgoode0014.jpg" class="photo" alt="Click to download high quality version" ></a></td>
 </tr>
 <tr>
-<td class="phototext">Andy B Goode Flyer 1 (HIGH RESOLUTION)</td>
-<td class="phototext">Andy B Goode Flyer background image (with no text) 2 (HIGH RESOLUTION)</td>
-<td class="phototext">Microphone 3 (HIGH RESOLUTION)</td>
-<td class="phototext">Full length Shot 4 (HIGH RESOLUTION)</td>
+<td class="phototext">Andy B Goode Flyer (HIGH RESOLUTION)</td>
+<td class="phototext">Andy B Goode Flyer background image (HIGH RESOLUTION)</td>
+<td class="phototext">Close up (HIGH RESOLUTION)</td>
+<td class="phototext">The vintage style microphone (HIGH RESOLUTION)</td>
 </tr>
 </table>
 </div>
@@ -113,103 +101,75 @@ If you have have any great photos from my gigs, please do send me a link to them
 <table class="phototable">
 
 <tr>
-<td class="albumheading" colspan="4">Latest Album 3 Title here xxxxxxxx x xxxx xxxxxxxx x xx x</td>
+<td class="albumheading" colspan="4">Birthday Parties</td>
 </tr>
 <tr>
-<td><img src="images/andybgoode.jpg" class="photo" alt="AndyBGoode Flyer"></td>
-<td><img src="images/andybgoode.jpg" class="photo" alt="AndyBGoode Flyer"></td>
-<td><img src="images/andybgoode.jpg" class="photo" alt="AndyBGoode Flyer"></td>
-<td><img src="images/andybgoode.jpg" class="photo" alt="AndyBGoode Flyer"></td>
+<td><img src="photos/andybgoode0005.jpg" class="photo" alt="The Birthday Girl Dressed as a Flapper"></td>
+<td><img src="photos/andybgoode0015.jpg" class="photo" alt="Elaine's Birthday Party"></td>
+<td><img src="photos/andybgoode0006.jpg" class="photo" alt="Anne's Birthday Party"></td>
+<td><img src="photos/andybgoode0016.jpg" class="photo" alt="Elaine's Birthday Party"></td>
 </tr>
 <tr>
-<td class="phototext">description of great day 1 xxx xxx xxxxxx xxxx</td>
-<td class="phototext">description 2</td>
-<td class="phototext">description 3 xxx xx xxx</td>
-<td class="phototext">description 4</td>
-</tr>
-
-<tr>
-<td class="albumheading" colspan="4">Older Album 2 Title here xxxxxxxx x xxxx xxxxxxxx x xx x</td>
-</tr>
-<tr>
-<td><img src="images/andybgoode.jpg" class="photo" alt="AndyBGoode Flyer"></td>
-<td><img src="images/andybgoode.jpg" class="photo" alt="AndyBGoode Flyer"></td>
-<td><img src="images/andybgoode.jpg" class="photo" alt="AndyBGoode Flyer"></td>
-<td><img src="images/andybgoode.jpg" class="photo" alt="AndyBGoode Flyer"></td>
-</tr>
-<tr>
-<td class="phototext">description of great day 1</td>
-<td class="phototext">description 2</td>
-<td class="phototext">description 3</td>
-<td class="phototext">description 4</td>
-</tr>
-<tr>
-<td><img src="images/andybgoode.jpg" class="photo" alt="AndyBGoode Flyer"></td>
-<td><img src="images/andybgoode.jpg" class="photo" alt="AndyBGoode Flyer"></td>
-<td><img src="images/andybgoode.jpg" class="photo" alt="AndyBGoode Flyer"></td>
-<td><img src="images/andybgoode.jpg" class="photo" alt="AndyBGoode Flyer"></td>
-</tr>
-<tr>
-<td class="phototext">description of great day 5</td>
-<td class="phototext">description 6</td>
-<td class="phototext">description 7</td>
-<td class="phototext">description 8</td>
+<td class="phototext">The Birthday Girl Dressed as a Flapper</td>
+<td class="phototext">Elaine's Birthday Party</td>
+<td class="phototext">Anne's Birthday Party</td>
+<td class="phototext">What a card</td>
 </tr>
 
 <tr>
-<td class="albumheading" colspan="4">Oldest Album 1 Title here xxxxxxxx x xxxx xxxxxxxx x xx x</td>
+<td class="albumheading" colspan="4">Vintage Fetes / Fayres</td>
 </tr>
 <tr>
-<td><img src="images/andybgoode.jpg" class="photo" alt="AndyBGoode Flyer"></td>
-<td><img src="images/andybgoode.jpg" class="photo" alt="AndyBGoode Flyer"></td>
-<td><img src="images/andybgoode.jpg" class="photo" alt="AndyBGoode Flyer"></td>
-<td><img src="images/andybgoode.jpg" class="photo" alt="AndyBGoode Flyer"></td>
+<td><img src="photos/andybgoode0011.jpg" class="photo" alt="Waving the flag at St Pauls Dosthill Church Vintage Summer Fete and I wasn't the only one who dressed vintage style."></td>
+<td><img src="photos/andybgoode0012.jpg" class="photo" alt="Singing by a picturesque church"></td>
+<td><img src="photos/andybgoode0008.jpg" class="photo" alt="Fly me to the moon"></td>
+<td><img src="photos/andybgoode0010.jpg" class="photo" alt="Singing with Passion"></td>
 </tr>
 <tr>
-<td class="phototext">description of great day 1</td>
-<td class="phototext">description 2</td>
-<td class="phototext">description 3</td>
-<td class="phototext">description 4</td>
+<td class="phototext">Waving the flag at St Pauls Dosthill Church Vintage Summer Fete and I wasn't the only one who dressed vintage style.</td>
+<td class="phototext">Singing by a picturesque church</td>
+<td class="phototext">Fly me to the moon</td>
+<td class="phototext">Singing with Passion</td>
 </tr>
 <tr>
-<td><img src="images/andybgoode.jpg" class="photo" alt="AndyBGoode Flyer"></td>
-<td><img src="images/andybgoode.jpg" class="photo" alt="AndyBGoode Flyer"></td>
-<td><img src="images/andybgoode.jpg" class="photo" alt="AndyBGoode Flyer"></td>
-<td><img src="images/andybgoode.jpg" class="photo" alt="AndyBGoode Flyer"></td>
+<td><img src="photos/andybgoode0007.jpg" class="photo" alt="A Traction engine at Norton Juxta Twycross Summer Fete"></td>
+<td><img src="photos/andybgoode0018.jpg" class="photo" alt="A beautiful summers day, with heavy rain showers...of course this is England"></td>
+<td><img src="photos/andybgoode0017.jpg" class="photo" alt="A lovely venue to sing, right by the swimming pool"></td>
+<td><img src="images/andybgoode.jpg" class="photo" alt="I sang 'Teenager in Love' live on the local radio station TRC FM"></td>
 </tr>
 <tr>
-<td class="phototext">description of great day 5</td>
-<td class="phototext">description 6</td>
-<td class="phototext">description 7</td>
-<td class="phototext">description 8</td>
+<td class="phototext">A Traction engine at Norton Juxta Twycross Summer Fete</td>
+<td class="phototext">A beautiful summers day, with heavy rain showers...of course this is England</td>
+<td class="phototext">A lovely venue to sing, right by the swimming pool</td>
+<td class="phototext">I sang 'Teenager in Love' live on the local radio station TRC FM</td>
 </tr>
 
 <tr>
-<td class="albumheading" colspan="4">The Jays Album</td>
+<td class="albumheading" colspan="4">The Jays Album - I am also proud to be part of a 1940s Vintage Vocal Tribute Group with some lovely ladies. We sing Andrews sisters, Bing Crosby, Frank Sinatra style songs.</td>
 </tr>
 <tr>
-<td><img src="images/andybgoode.jpg" class="photo" alt="AndyBGoode Flyer"></td>
-<td><img src="images/andybgoode.jpg" class="photo" alt="AndyBGoode Flyer"></td>
-<td><img src="images/andybgoode.jpg" class="photo" alt="AndyBGoode Flyer"></td>
-<td><img src="images/andybgoode.jpg" class="photo" alt="AndyBGoode Flyer"></td>
+<td><img src="photos/thejays0001.jpg" class="photo" alt="The Jays at Tamworth Castle Grounds"></td>
+<td><img src="photos/thejays0002.jpg" class="photo" alt="The Jays at Tamworth Castle Grounds amongst the flowers"></td>
+<td><img src="photos/thejays0006.jpg" class="photo" alt="The Jays at Tamworth Castle Grounds 2016"></td>
+<td><img src="photos/thejays0007.jpg" class="photo" alt="The Jays at Ashby Christmas Light Switch on"></td>
 </tr>
 <tr>
-<td class="phototext">description of great day 1</td>
-<td class="phototext">description 2</td>
-<td class="phototext">description 3</td>
-<td class="phototext">description 4</td>
+<td class="phototext">The Jays at Tamworth Castle Grounds</td>
+<td class="phototext">The Jays at Tamworth Castle Grounds amongst the flowers</td>
+<td class="phototext">The Jays perform at Tamworth Band Stand</td>
+<td class="phototext">The Jays at Ashby Christmas Light Switch on</td>
 </tr>
 <tr>
-<td><img src="images/andybgoode.jpg" class="photo" alt="AndyBGoode Flyer"></td>
-<td><img src="images/andybgoode.jpg" class="photo" alt="AndyBGoode Flyer"></td>
-<td><img src="images/andybgoode.jpg" class="photo" alt="AndyBGoode Flyer"></td>
-<td><img src="images/andybgoode.jpg" class="photo" alt="AndyBGoode Flyer"></td>
+<td><img src="photos/thejays0005.jpg" class="photo" alt="I'm just leaning on the lamp post on the corner of the street, till a certain little lady comes by"></td>
+<td><img src="photos/thejays0004.jpg" class="photo" alt="I believe I can fly"></td>
+<td><img src="photos/thejays0003.jpg" class="photo" alt="A Cheeky Jays Shot"></td>
+<td><img src="photos/thejays0008.jpg" class="photo" alt="The Jays Vocal Vintage Tribute Group from Tamworth Staffordshire"></td>
 </tr>
 <tr>
-<td class="phototext">description of great day 5</td>
-<td class="phototext">description 6</td>
-<td class="phototext">description 7</td>
-<td class="phototext">description 8</td>
+<td class="phototext">I'm just leaning on the lamp post on the corner of the street, till a certain little lady comes by</td>
+<td class="phototext">I believe I can fly</td>
+<td class="phototext">A Cheeky Jays Shot</td>
+<td class="phototext">The Jays Vocal Vintage Tribute Group from Tamworth Staffordshire</td>
 </tr>
 
 </table>
@@ -230,7 +190,7 @@ If you have have any great photos from my gigs, please do send me a link to them
 <li>Twitter: <a href="http://www.twitter.com/AndyBVocalist">www.twitter.com/AndyBVocalist</a></li>
 <li>YouTube: <a href="https://www.youtube.com/channel/UCHJsASS25ndVJYEykEK9BLQ">Andy B Goode Channel</a></li>
 <li>Instagram: <a href="https://www.instagram.com/andybgoodevocalist">www.instagram.com/andybgoodevocalist</a></li>
-<li>website: v2.0.2</li>
+<li>website: v2.0.3</li>
 </ul>
 </div>
 </div>
