--- a/photo.html
+++ b/photo.html
@@ -34,14 +34,14 @@
 
 
 <tr>
-<td class="polaroidcell"><table class="polaroid"><tr><td class="photocell"><img src="images/andybgoode.jpg" class="photoH" alt="AndyBGoode Flyer"></td></tr><tr><td class="phototext">description of great day 1 xxx xxx xxxxxx xxxx xxx xxx xxxxxx xxxx</td></tr></table></td>
-<td class="polaroidcell"><table class="polaroid"><tr><td class="photocell"><img src="images/andybgoode.jpg" class="photoH" alt="AndyBGoode Flyer"></td></tr><tr><td class="phototext">description of great day 1 xxx xxx xxxxxx xxxx xxx xxx xxxxxx xxxx</td></tr></table></td>
-<td>aaaa</td>
-<td class="polaroidcell"><table class="polaroid"><tr><td class="photocell"><img src="images/andybgoode.jpg" class="photoH" alt="AndyBGoode Flyer"></td></tr><tr><td class="phototext">description of great day 1 xxx xxx xxxxxx xxxx xxx xxx xxxxxx xxxx</td></tr></table></td>
+<td class="polaroidcell"><table class="polaroid"><tr><td class="photocell"><img src="photos/andybgoode0006.jpg" class="photoH" alt="AndyBGoode Flyer"></td></tr><tr><td class="phototext">description of great day 1 xxx xxx xxxxxx xxxx xxx xxx xxxxxx xxxx</td></tr></table></td>
+<td class="polaroidcell"><table class="polaroid"><tr><td class="photocell"><img src="photos/andybgoode0010.jpg" class="photoV" alt="AndyBGoode Flyer"></td></tr><tr><td class="phototext">description of great day 1 xxx xxx xxxxxx xxxx xxx xxx xxxxxx xxxx</td></tr></table></td>
+<td class="polaroidcell"><table class="polaroid"><tr><td class="photocell"><img src="photos/andybgoode0006.jpg" class="photoV" alt="AndyBGoode Flyer"></td></tr><tr><td class="phototext">description of great day 1 xxx xxx xxxxxx xxxx xxx xxx xxxxxx xxxx</td></tr></table></td>
+<td class="polaroidcell"><table class="polaroid"><tr><td class="photocell"><img src="photos/andybgoode0006.jpg" class="photoV" alt="AndyBGoode Flyer"></td></tr><tr><td class="phototext">description of great day 1 xxx xxx xxxxxx xxxx xxx xxx xxxxxx xxxx</td></tr></table></td>
 </tr>
 
 <tr>
-<td class="polaroidcell"><table class="polaroid"><tr><td class="photocell"><img src="images/andybgoode.jpg" class="photoH" alt="AndyBGoode Flyer"></td></tr><tr><td class="phototext">description of great day 1 xxx xxx xxxxxx xxxx xxx xxx xxxxxx xxxx</td></tr></table></td>
+<td class="polaroidcell"><table class="polaroid"><tr><td class="photocell"><img src="photos/andybgoode0017.jpg" class="photoH" alt="AndyBGoode Flyer"></td></tr><tr><td class="phototext">description of great day 1 xxx xxx xxxxxx xxxx xxx xxx xxxxxx xxxx</td></tr></table></td>
 <td class="polaroidcell"><table class="polaroid"><tr><td class="photocell"><img src="images/andybgoode-tall.jpg" class="photoV" alt="AndyBGoode Flyer"></td></tr><tr><td class="phototext">description of great day 1 xxx xxx xxxxxx xxxx xxx xxx xxxxxx xxxx</td></tr></table></td>
 <td class="polaroidcell"><table class="polaroid"><tr><td class="photocell"><img src="images/portalLogo.png" class="photoH" alt="AndyBGoode Flyer"></td></tr><tr><td class="phototext">description of great day 1 xxx xxx xxxxxx xxxx xxx xxx xxxxxx xxxx</td></tr></table></td>
 <td class="polaroidcell"><table class="polaroid"><tr><td class="photocell"><img src="images/andybgoode.jpg" class="photoH" alt="AndyBGoode Flyer"></td></tr><tr><td class="phototext">description of great day 1 xxx xxx xxxxxx xxxx xxx xxx xxxxxx xxxx</td></tr></table></td>
