--- a/photo.html
+++ b/photo.html
@@ -36,22 +36,22 @@
 <tr>
 <td class="polaroidcell"><table class="polaroid"><tr><td class="photocell"><img src="photos/andybgoode0006.jpg" class="photoH" alt="AndyBGoode Flyer"></td></tr><tr><td class="phototext">description of great day 1 xxx xxx xxxxxx xxxx xxx xxx xxxxxx xxxx</td></tr></table></td>
 <td class="polaroidcell"><table class="polaroid"><tr><td class="photocell"><img src="photos/andybgoode0010.jpg" class="photoV" alt="AndyBGoode Flyer"></td></tr><tr><td class="phototext">description of great day 1 xxx xxx xxxxxx xxxx xxx xxx xxxxxx xxxx</td></tr></table></td>
-<td class="polaroidcell"><table class="polaroid"><tr><td class="photocell"><img src="photos/andybgoode0006.jpg" class="photoV" alt="AndyBGoode Flyer"></td></tr><tr><td class="phototext">description of great day 1 xxx xxx xxxxxx xxxx xxx xxx xxxxxx xxxx</td></tr></table></td>
-<td class="polaroidcell"><table class="polaroid"><tr><td class="photocell"><img src="photos/andybgoode0006.jpg" class="photoV" alt="AndyBGoode Flyer"></td></tr><tr><td class="phototext">description of great day 1 xxx xxx xxxxxx xxxx xxx xxx xxxxxx xxxx</td></tr></table></td>
+<td class="polaroidcell"><table class="polaroid"><tr><td class="photocell"><img src="photos/andybgoode0008.jpg" class="photoV" alt="AndyBGoode Flyer"></td></tr><tr><td class="phototext">description of great day 1 xxx xxx xxxxxx xxxx xxx xxx xxxxxx xxxx</td></tr></table></td>
+<td class="polaroidcell"><table class="polaroid"><tr><td class="photocell"><img src="photos/andybgoode0009.jpg" class="photoV" alt="AndyBGoode Flyer"></td></tr><tr><td class="phototext">description of great day 1 xxx xxx xxxxxx xxxx xxx xxx xxxxxx xxxx</td></tr></table></td>
 </tr>
 
 <tr>
 <td class="polaroidcell"><table class="polaroid"><tr><td class="photocell"><img src="photos/andybgoode0017.jpg" class="photoH" alt="AndyBGoode Flyer"></td></tr><tr><td class="phototext">description of great day 1 xxx xxx xxxxxx xxxx xxx xxx xxxxxx xxxx</td></tr></table></td>
 <td class="polaroidcell"><table class="polaroid"><tr><td class="photocell"><img src="images/andybgoode-tall.jpg" class="photoV" alt="AndyBGoode Flyer"></td></tr><tr><td class="phototext">description of great day 1 xxx xxx xxxxxx xxxx xxx xxx xxxxxx xxxx</td></tr></table></td>
-<td class="polaroidcell"><table class="polaroid"><tr><td class="photocell"><img src="images/portalLogo.png" class="photoH" alt="AndyBGoode Flyer"></td></tr><tr><td class="phototext">description of great day 1 xxx xxx xxxxxx xxxx xxx xxx xxxxxx xxxx</td></tr></table></td>
-<td class="polaroidcell"><table class="polaroid"><tr><td class="photocell"><img src="images/andybgoode.jpg" class="photoH" alt="AndyBGoode Flyer"></td></tr><tr><td class="phototext">description of great day 1 xxx xxx xxxxxx xxxx xxx xxx xxxxxx xxxx</td></tr></table></td>
+<td class="polaroidcell"><table class="polaroid"><tr><td class="photocell"><img src="photos/andybgoode0011.jpg" class="photoH" alt="AndyBGoode Flyer"></td></tr><tr><td class="phototext">description of great day 1 xxx xxx xxxxxx xxxx xxx xxx xxxxxx xxxx</td></tr></table></td>
+<td class="polaroidcell"><table class="polaroid"><tr><td class="photocell"><img src="photos/andybgoode0017.jpg" class="photoV" alt="AndyBGoode Flyer"></td></tr><tr><td class="phototext">description of great day 1 xxx xxx xxxxxx xxxx xxx xxx xxxxxx xxxx</td></tr></table></td>
 </tr>
 
 <tr>
-<td class="polaroidcell"><table class="polaroid"><tr><td class="photocell"><img src="images/andybgoode.jpg" class="photoH" alt="AndyBGoode Flyer"></td></tr><tr><td class="phototext">description of great day 1 xxx xxx xxxxxx xxxx xxx xxx xxxxxx xxxx</td></tr></table></td>
-<td class="polaroidcell"><table class="polaroid"><tr><td class="photocell"><img src="images/andybgoode.jpg" class="photoH" alt="AndyBGoode Flyer"></td></tr><tr><td class="phototext">description of great day 1 xxx xxx xxxxxx xxxx xxx xxx xxxxxx xxxx</td></tr></table></td>
-<td class="polaroidcell"><table class="polaroid"><tr><td class="photocell"><img src="images/andybgoode.jpg" class="photoH" alt="AndyBGoode Flyer"></td></tr><tr><td class="phototext">description of great day 1 xxx xxx xxxxxx xxxx xxx xxx xxxxxx xxxx</td></tr></table></td>
-<td class="polaroidcell"><table class="polaroid"><tr><td class="photocell"><img src="images/andybgoode.jpg" class="photoH" alt="AndyBGoode Flyer"></td></tr><tr><td class="phototext">description of great day 1 xxx xxx xxxxxx xxxx xxx xxx xxxxxx xxxx</td></tr></table></td>
+<td class="polaroidcell"><table class="polaroid"><tr><td class="photocell"><img src="photos/thejays0001.jpg" class="photoH" alt="AndyBGoode Flyer"></td></tr><tr><td class="phototext">description of great day 1 xxx xxx xxxxxx xxxx xxx xxx xxxxxx xxxx</td></tr></table></td>
+<td class="polaroidcell"><table class="polaroid"><tr><td class="photocell"><img src="photos/thejays0002.jpg" class="photoH" alt="AndyBGoode Flyer"></td></tr><tr><td class="phototext">description of great day 1 xxx xxx xxxxxx xxxx xxx xxx xxxxxx xxxx</td></tr></table></td>
+<td class="polaroidcell"><table class="polaroid"><tr><td class="photocell"><img src="photos/thejays0003.jpg" class="photoH" alt="AndyBGoode Flyer"></td></tr><tr><td class="phototext">description of great day 1 xxx xxx xxxxxx xxxx xxx xxx xxxxxx xxxx</td></tr></table></td>
+<td class="polaroidcell"><table class="polaroid"><tr><td class="photocell"><img src="photos/thejays0001.jpg" class="photoV" alt="AndyBGoode Flyer"></td></tr><tr><td class="phototext">description of great day 1 xxx xxx xxxxxx xxxx xxx xxx xxxxxx xxxx</td></tr></table></td>
 </tr>
 
 </table>
