--- a/photo.html
+++ b/photo.html
@@ -5,8 +5,8 @@
  All rights reserved
  -->
 <head>
-<title>Polaroid Photo</title>
-<link rel="stylesheet" type="text/css" href="style-polaroid.css"/>
+<title>Andy B Goode - Photo</title>
+<link rel="stylesheet" type="text/css" href="style.css"/>
 
 </head>
 
