--- a/music.html
+++ b/music.html
@@ -63,6 +63,9 @@
 
 <div id="info-area"><div class="textbox-area">
 <h3>On this page you will find mp3s to download and my videos.</h3>
+<h3></h3>Heres a link to my <a href="https://www.youtube.com/channel/UCHJsASS25ndVJYEykEK9BLQ">'Andy B Goode YouTube Channel'</a></h3>
+
+
 </div></div>
 
 
@@ -88,8 +91,6 @@ Here are two of my demo tracks: 'Johnny B. Goode' and 'Earth Angel'.
 <div id="video-area">
 <h2 id="videos" class="banner">Videos</h2>
 <div class="textbox-area">
-Heres a link to my <a href="https://www.youtube.com/channel/UCHJsASS25ndVJYEykEK9BLQ">'Andy B Goode YouTube Channel'</a><br/>
-
 
 Andy B Goode Showreel Summer 2016<br/>
 This contains snippets from loads of songs, all recorded live at St Pauls Church Dosthill Summer Vintage Fete.<br/>
