--- a/music.html
+++ b/music.html
@@ -63,7 +63,7 @@
 
 <div id="info-area"><div class="textbox-area">
 <h3>On this page you will find mp3s to download and my videos.</h3>
-<h3></h3>Heres a link to my <a href="https://www.youtube.com/channel/UCHJsASS25ndVJYEykEK9BLQ">'Andy B Goode YouTube Channel'</a></h3>
+<h3>Heres a link to my <a href="https://www.youtube.com/channel/UCHJsASS25ndVJYEykEK9BLQ">'Andy B Goode YouTube Channel'</a></h3>
 
 
 </div></div>
