--- a/music.html
+++ b/music.html
@@ -92,7 +92,7 @@ Here are two of my demo tracks: 'Johnny B. Goode' and 'Earth Angel'.
 <h2 id="videos" class="banner">Videos</h2>
 <div class="textbox-area">
 
-Andy B Goode Showreel Summer 2016<br/>
+<h3>Andy B Goode Showreel Summer 2016</h3>
 This contains snippets from loads of songs, all recorded live at St Pauls Church Dosthill Summer Vintage Fete.<br/>
 <iframe width="560" height="315" src="https://www.youtube.com/embed/f4x4ei3muL8" frameborder="0" allowfullscreen></iframe>
 <br/>
