--- a/music.html
+++ b/music.html
@@ -92,20 +92,21 @@ Here are two of my demo tracks: 'Johnny B. Goode' and 'Earth Angel'.
 <h2 id="videos" class="banner">Videos</h2>
 <div class="textbox-area">
 
-<h3>Andy B Goode Showreel Summer 2016</h3>
+<h3>'Andy B Goode' Showreel Summer 2016</h3>
 This contains snippets from loads of songs, all recorded live at St Pauls Church Dosthill Summer Vintage Fete.<br/>
+You could play 'name that tune'.</br>
 <iframe width="560" height="315" src="https://www.youtube.com/embed/f4x4ei3muL8" frameborder="0" allowfullscreen></iframe>
 <br/>
 
-'Teenager in Love'<br/>
+<h3></h3>'Teenager in Love'</h3>
 <iframe width="560" height="315" src="https://www.youtube.com/embed/xfGqHgRePIY" frameborder="0" allowfullscreen></iframe>
 <br/>
 
-'Johnny B. Goode' sung by Andy B Goode (originally by the fantastic Chuck Berry) (Audio only)<br/>
+<h3>'Johnny B. Goode' originally by the fantastic Chuck Berry (Audio only)</h3>
 <iframe width="560" height="315" src="https://www.youtube.com/embed/9E8LMdoa5co" frameborder="0" allowfullscreen></iframe>
 <br/>
 
-'Earth Angel' sung by Andy B Goode (from Back To The Future)<br/>
+<h3>'Earth Angel' from Back To The Future (Audio only)</h3>
 <iframe width="560" height="315" src="https://www.youtube.com/embed/oRQt2_bjvMU" frameborder="0" allowfullscreen></iframe>
 <br/>
 
