--- a/music.html
+++ b/music.html
@@ -63,7 +63,7 @@
 
 <div id="info-area"><div class="textbox-area">
 <h3>On this page you will find mp3s to download and my videos.</h3>
-<h3>Heres a link to my <a href="https://www.youtube.com/channel/UCHJsASS25ndVJYEykEK9BLQ">'Andy B Goode YouTube Channel'</a></h3>
+<h3>Heres a link to my <a href="https://www.youtube.com/channel/UCHJsASS25ndVJYEykEK9BLQ">'Andy B Goode' YouTube Channel</a></h3>
 
 
 </div></div>
@@ -98,15 +98,17 @@ You could play 'name that tune'.</br>
 <iframe width="560" height="315" src="https://www.youtube.com/embed/f4x4ei3muL8" frameborder="0" allowfullscreen></iframe>
 <br/>
 
-<h3></h3>'Teenager in Love'</h3>
+<h3>'Teenager in Love'</h3>
 <iframe width="560" height="315" src="https://www.youtube.com/embed/xfGqHgRePIY" frameborder="0" allowfullscreen></iframe>
 <br/>
 
 <h3>'Johnny B. Goode' originally by the fantastic Chuck Berry (Audio only)</h3>
+Back to the Future is one of my favourite movies, and this track really added energy to the film.</br>
 <iframe width="560" height="315" src="https://www.youtube.com/embed/9E8LMdoa5co" frameborder="0" allowfullscreen></iframe>
 <br/>
 
 <h3>'Earth Angel' from Back To The Future (Audio only)</h3>
+Again song from Back to the Future. This time it's a slow love song.</br>
 <iframe width="560" height="315" src="https://www.youtube.com/embed/oRQt2_bjvMU" frameborder="0" allowfullscreen></iframe>
 <br/>
 
