--- a/photos.html
+++ b/photos.html
@@ -49,9 +49,10 @@
 <div class="menu">
 <a href="index.html">Home</a>
 <a href="photos.html">Photos</a>
-<a href="music.html">Music/Videos</a> 
-<a href="testimonials.html">Testimonials</a> 
-<a href="terms.html">Terms</a>
+<a href="music.html">Music</a>
+<a href="music.html#videos">Videos</a>
+<a href="testimonials.html">Songs</a>
+<a href="testimonials.html#testimonials">Testimonials</a>
 <a href="#contact">Contact</a>
 </div>
 <br/>
@@ -101,7 +102,7 @@ If you have have any great photos from my gigs, please do send me a link to them
 <table class="phototable">
 
 <tr>
-<td class="albumheading" colspan="4">Birthday Parties</td>
+<td class="albumheading" colspan="4"><h3>Birthday Parties</h3></td>
 </tr>
 <tr>
 <td><img src="photos/andybgoode0005.jpg" class="photo" alt="The Birthday Girl Dressed as a Flapper"></td>
@@ -117,7 +118,7 @@ If you have have any great photos from my gigs, please do send me a link to them
 </tr>
 
 <tr>
-<td class="albumheading" colspan="4">Vintage Fetes / Fayres</td>
+<td class="albumheading" colspan="4"><h3>Vintage Fetes / Fayres</h3></td>
 </tr>
 <tr>
 <td><img src="photos/andybgoode0011.jpg" class="photo" alt="Waving the flag at St Pauls Dosthill Church Vintage Summer Fete and I wasn't the only one who dressed vintage style."></td>
@@ -145,7 +146,7 @@ If you have have any great photos from my gigs, please do send me a link to them
 </tr>
 
 <tr>
-<td class="albumheading" colspan="4">The Jays Album - I am also proud to be part of a 1940s Vintage Vocal Tribute Group with some lovely ladies. We sing Andrews sisters, Bing Crosby, Frank Sinatra style songs.</td>
+<td class="albumheading" colspan="4"><h3>The Jays Vocal Vintage Tribute Group</h3>I am also proud to be part of a 1940s Vocal Vintage Tribute Group with some lovely ladies.We sing Andrews sisters, Bing Crosby, Frank Sinatra style songs. Do check out our <a href="https://www.facebook.com/TheJaysVintage">facebook</a> page and <a href="http://www.TheJaysVintageVocalGroup.webs.com">website</a>.</td>
 </tr>
 <tr>
 <td><img src="photos/thejays0001.jpg" class="photo" alt="The Jays at Tamworth Castle Grounds"></td>
@@ -190,7 +191,7 @@ If you have have any great photos from my gigs, please do send me a link to them
 <li>Twitter: <a href="http://www.twitter.com/AndyBVocalist">www.twitter.com/AndyBVocalist</a></li>
 <li>YouTube: <a href="https://www.youtube.com/channel/UCHJsASS25ndVJYEykEK9BLQ">Andy B Goode Channel</a></li>
 <li>Instagram: <a href="https://www.instagram.com/andybgoodevocalist">www.instagram.com/andybgoodevocalist</a></li>
-<li>website: v2.0.3</li>
+<li>website: v2.0.6</li>
 </ul>
 </div>
 </div>
