--- a/music.html
+++ b/music.html
@@ -49,9 +49,10 @@
 <div class="menu">
 <a href="index.html">Home</a>
 <a href="photos.html">Photos</a>
-<a href="music.html">Music/Videos</a> 
-<a href="testimonials.html">Testimonials</a> 
-<a href="terms.html">Terms</a>
+<a href="music.html">Music</a>
+<a href="music.html#videos">Videos</a>
+<a href="testimonials.html">Songs</a>
+<a href="testimonials.html#testimonials">Testimonials</a>
 <a href="#contact">Contact</a>
 </div>
 <br/>
@@ -80,7 +81,7 @@ Here are two of my demo tracks: 'Johnny B. Goode' and 'Earth Angel'.
 
 <a href="/media/001_-_AndyBGoode_-_Johnny_B_Goode.mp3" download>Johnny B. Goode</a> 
 <a href="/media/001_-_AndyBGoode_-_Johnny_B_Goode.mp3" download><img alt="Johnny B Goode" src="images/demojohnnybgoodeart.jpg" width="120" height="120"></a> 
-<a href="/media/002_-_AndyBGoode_-_Earth_Angel.mp3" download>Earth Angel</a> 
+<a href="/media/002_-_AndyBGoode_-_Earth_Angel.mp3" download>Earth Angel (Will You Be Mine)</a> 
 <a href="/media/002_-_AndyBGoode_-_Earth_Angel.mp3" download><img alt="Earth Angel" src="images/demoearthangelart.jpg" width="120" height="120"></a>
 <br/>
 
@@ -130,7 +131,7 @@ Again a song from 'Back to the Future'. This time it's a slow love song.</br>
 <li>Twitter: <a href="http://www.twitter.com/AndyBVocalist">www.twitter.com/AndyBVocalist</a></li>
 <li>YouTube: <a href="https://www.youtube.com/channel/UCHJsASS25ndVJYEykEK9BLQ">Andy B Goode Channel</a></li>
 <li>Instagram: <a href="https://www.instagram.com/andybgoodevocalist">www.instagram.com/andybgoodevocalist</a></li>
-<li>website: v2.0.4</li>
+<li>website: v2.0.6</li>
 </ul>
 </div>
 </div>
