--- a/index.html
+++ b/index.html
@@ -143,10 +143,10 @@ So prepare yourself for beautiful 1940s Vintage Harmonies, Energetic 1950s Rock 
 <li>Phone: 07979 536591</li>
 <li>email: Andy@AndyBGoode.com</li>
 <li>Facebook: <a href="https://www.facebook.com/AndyBGoode">www.facebook.com/AndyBGoode</a></li>
-<li>Twitter: <a href="http://www.twitter.com/AndyBVocalist">www.twitter.com/AndyBVocalist</a></li>
-<li>YouTube: <a href="https://www.youtube.com/channel/UCHJsASS25ndVJYEykEK9BLQ">Andy B Goode Channel</a></li>
 <li>Instagram: <a href="https://www.instagram.com/andybgoodevocalist">www.instagram.com/andybgoodevocalist</a></li>
-<li>website: v2.0.6</li>
+<li>YouTube: <a href="https://www.youtube.com/channel/UCHJsASS25ndVJYEykEK9BLQ">Andy B Goode Channel</a></li>
+<li>Twitter: <a href="http://www.twitter.com/AndyBGoode">www.twitter.com/AndyBGoode</a></li>
+<li>website: v2.0.7</li>
 </ul>
 </div>
 </div>
