--- a/photos.html
+++ b/photos.html
@@ -7,6 +7,9 @@
 <head>
 <title>Andy B Goode - Photos- Vintage Rock n Roll Singer, Staffordshire, UK</title>
 <link rel="stylesheet" type="text/css" href="style.css"/>
+<meta http-equiv="Cache-Control" content="no-cache" />
+<meta http-equiv="Pragma" content="no-cache" />
+<meta http-equiv="expires" content="0" />
 <meta name="short" content="AndyBGoode 1950s/60 Rock and Roll Entertainer - Photos"/>
 <meta name="description" content="Andy B Goode 1950s/1960s Rock n Roll Singer based in Tamworth, Staffordshire, England">
 <meta name="author" content="Andrew Britton">
