--- a/showhide.html
+++ b/showhide.html
@@ -446,17 +446,25 @@ function initVars() {
   showPagesControls();
   showPage(0);
 
+//TODO Thumbnail Photos
+//TODO Full Screen Photos
+//TODO High Res Photos
+//TODO Thumbnail Presentation
+//TODO Full Screen Photo Presentation
+
 //TODO Image for play button
 //TODO Image for pause button
 //TODO Image for previous button
 //TODO Image for next button
 
-//TODO Test on Chrome .... FAILS
-//TODO Test on IE
-//TODO Test on Android Browser
-//TODO Test on Safari
+//TODO Test on Firefox .... TESTED OK
+//TODO Test on Chrome ..... TESTED OK
+//TODO Test on IE ......... 
+//TODO Test on Edge ....... 
+//TODO Test on Android .... 
+//TODO Test on Safari ..... 
 
-//TODO Tag cloud
+//TODO Display Tag cloud
 
 }
 
